--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-block-utility",
 	"name": "Block Utility",
-	"version": "1.4.0",
+	"version": "1.5.0",
 	"minAppVersion": "0.15.0",
-	"description": "Provides hotkeys to copy or select content within Code (```) or LaTeX ($$) blocks.",
+	"description": "Provides hotkeys to copy or select content within Code (```), LaTeX ($$), box-info, or tag-info blocks.",
 	"author": "PandaSt0rm",
 	"authorUrl": "",
 	"isDesktopOnly": false
