--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-block-utility",
-  "version": "1.4.0",
-  "description": "Provides hotkeys to copy or select content within Code (```) or LaTeX ($$) blocks.",
+  "version": "1.5.0",
+  "description": "Provides hotkeys to copy or select content within Code (```), LaTeX ($$), box-info, or tag-info blocks.",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
