--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.0",
   "description": "Provides hotkeys to copy or select content within Code (```), LaTeX ($$), box-info, or tag-info blocks.",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production"
@@ -16,15 +17,15 @@
   "author": "PandaSt0rm",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.14.0",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/node": "^24.5.2",
     "obsidian": "^1.8.7",
-    "rollup": "^4.39.0",
+    "rollup": "^4.52.0",
     "rollup-plugin-copy": "^3.5.0",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   }
 }
