redesign fence handling and inline removal
This is a complete rewrite of fence detection, selection, copying, and removal. The plugin now treats fences generically and prioritizes inline removal around the caret.

Highlights

- Generalized fence detection: supports ```/~~~ (variable length), $$, and :::-style admonitions (box-info, tag-info, latex, and generic ::: with end-... matching).
- Inline-first detection: the caret’s line is scanned for inline fences before any block scan, preventing false positives from $$ above/below.
- New inline formatting support: backticks, inline math ($/$$), italic, bold, bold-italic, underline (++), strikethrough (~~), highlight (==).
- Layered removal: repeated hotkey presses peel the outermost layer first (e.g., *\`$x$\`* → italic → backticks → math).
- New types: InlineCode, InlineMath, InlineLaTeX, InlineItalic, InlineBold, InlineBoldItalic, InlineUnderline, InlineStrikethrough, InlineHighlight, plus GenericFence for :::.
- Consistent messaging: replaces “Block” with “Fence” where appropriate, updates command names and notices.
- Docs and manifests updated; version bumped to 2.0.0.

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-block-utility",
 	"name": "Block Utility",
-	"version": "1.5.0",
+	"version": "2.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Provides hotkeys to copy or select content within Code (```), LaTeX ($$), box-info, or tag-info blocks.",
+	"description": "Provides hotkeys to work with Markdown fences (code, math, info, inline) in Obsidian.",
 	"author": "PandaSt0rm",
 	"authorUrl": "",
 	"isDesktopOnly": true
