--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-block-utility",
-  "version": "1.5.0",
-  "description": "Provides hotkeys to copy or select content within Code (```), LaTeX ($$), box-info, or tag-info blocks.",
+  "version": "2.0.0",
+  "description": "Provides hotkeys to work with Markdown fences (code, math, info, inline) in Obsidian.",
   "main": "main.js",
   "type": "module",
   "scripts": {
